package PACKAGE_NAME;

public class AscHacker {
}
